--- a/TODO
+++ b/TODO
@@ -1,5 +1,39 @@
-#summary TODO-list
-#labels Phase-Design,Phase-Requirements,TODO
+Drupal:
+    CVE-2011-2726 http://drupal.org/node/1231510
+    CVE-2011-4113
+    CVE-2012-0825
+    CVE-2012-0826
+    CVE-2012-0827
+    DRUPAL-SA-CORE-2012-001
+    SA-CONTRIB-2012-017 OSVDB:79014,79015 (requested CVE-identifier in oss-security)
+    Contact Save Module http://osvdb.org/show/osvdb/80669
+    ShareThis Module http://osvdb.org/show/osvdb/80670
+    MultiBlock Module http://osvdb.org/show/osvdb/80673
+    Contact Forms Module http://osvdb.org/show/osvdb/80674
+    Share Buttons (AddToAny) http://osvdb.org/show/osvdb/80675
+    Bundle Copy Module http://osvdb.org/show/osvdb/80676
+    Ubercart Views Module http://osvdb.org/show/osvdb/80677
+    Organic groups Module http://osvdb.org/show/osvdb/80678
+    Chaos tool suite Module http://osvdb.org/show/osvdb/80679
+    Fusion Theme for Drupal http://osvdb.org/show/osvdb/80680
+    ShareThis Module http://osvdb.org/show/osvdb/80681
+    Activity Module for Drupal http://osvdb.org/show/osvdb/80682
+    Activity Module for Drupal http://osvdb.org/show/osvdb/80683
+    Node Limit Number Module http://osvdb.org/show/osvdb/80684
+    CDN2 Video Module http://osvdb.org/show/osvdb/80685
+    CDN2 Video Module http://osvdb.org/show/osvdb/80686
+
+{{{
+'drupal6' : {
+    'dir':          'modules/system',
+    'file':         'system.info',
+    'regexp':       'version.*?(?P<version>[0-9.]{1,})' },
+'drupal5' : {
+    'dir':          'modules/system',
+    'file':         'system.info',
+    'regexp':       'version.*?(?P<version>[0-9].[0-9.]{1,})' },
+}}}
+
 
   * Joomla: CVE-2011-2509
   * WikyBlog: Haven't fixed security vulnerabilities in years
@@ -9,21 +43,6 @@
     * CVE-2010-0757 OSVDB:62648
   * Piwik
     * CVE-2011-4941 OSVDV:73213 http://piwik.org/blog/2011/06/piwik-1-5-security-advisory/
-  * Drupal
-    * SA-CONTRIB-2012-017 OSVDB:79014,79015 (requested CVE-identifier in oss-security)
-    * Contact Save Module http://osvdb.org/show/osvdb/80669
-    * ShareThis Module http://osvdb.org/show/osvdb/80670
-    * MultiBlock Module http://osvdb.org/show/osvdb/80673
-    * Contact Forms Module http://osvdb.org/show/osvdb/80674
-    * Share Buttons (AddToAny) http://osvdb.org/show/osvdb/80675
-    * Bundle Copy Module http://osvdb.org/show/osvdb/80676
-    * Ubercart Views Module http://osvdb.org/show/osvdb/80677
-    * Organic groups Module http://osvdb.org/show/osvdb/80678
-    * Chaos tool suite Module http://osvdb.org/show/osvdb/80679
-    * Fusion Theme for Drupal http://osvdb.org/show/osvdb/80680
-    * ShareThis Module http://osvdb.org/show/osvdb/80681
-    * Activity Module for Drupal http://osvdb.org/show/osvdb/80682
-    * Activity Module for Drupal http://osvdb.org/show/osvdb/80683
   * Orbis CMS <http://www.novo-ws.com/orbis-cms/>
     * CVE-2010-4313 in newest version and whole project is EOL
   * Pandora FMS:
@@ -533,23 +552,6 @@ Coppermine version.*?(?P<version>[0-9.]{1,})
 
 * http://secunia.com/advisories/product/13411/?task=advisories
 * CVE-2012-0995
-
-=== Drupal ===
-
-* CVE-2011-4113
-* CVE-2011-2726 http://drupal.org/node/1231510
-* DRUPAL-SA-CORE-2012-001 CVE-2012-0826 CVE-2012-0825 CVE-2012-0827
-
-{{{
-'drupal6' : {
-    'dir':          'modules/system',
-    'file':         'system.info',
-    'regexp':       'version.*?(?P<version>[0-9.]{1,})' },
-'drupal5' : {
-    'dir':          'modules/system',
-    'file':         'system.info',
-    'regexp':       'version.*?(?P<version>[0-9].[0-9.]{1,})' },
-}}}
 
 == No category ===
 
