--- a/TODO
+++ b/TODO
@@ -22,6 +22,9 @@ Drupal:
     Node Limit Number Module http://osvdb.org/show/osvdb/80684
     CDN2 Video Module http://osvdb.org/show/osvdb/80685
     CDN2 Video Module http://osvdb.org/show/osvdb/80686
+    CVE-2011-2726 SA-CORE-2011-003 http://drupal.org/node/1231510
+    CVE-2011-2687 SA-CORE-2011-002 http://drupal.org/node/1204582
+    SA-CORE-2011-001 http://drupal.org/node/1168756
 
 {{{
 'drupal6' : {
