--- a/TODO
+++ b/TODO
@@ -25,6 +25,19 @@ Drupal:
     CVE-2011-2726 SA-CORE-2011-003 http://drupal.org/node/1231510
     CVE-2011-2687 SA-CORE-2011-002 http://drupal.org/node/1204582
     SA-CORE-2011-001 http://drupal.org/node/1168756
+    SA-CONTRIB-2012-043
+    SA-CONTRIB-2012-044
+    SA-CONTRIB-2012-045
+    SA-CONTRIB-2012-046
+    SA-CONTRIB-2012-047
+    SA-CONTRIB-2012-048
+    SA-CONTRIB-2012-049
+    SA-CONTRIB-2012-050
+    SA-CONTRIB-2012-051
+    SA-CONTRIB-2012-052
+    SA-CONTRIB-2012-053
+    SA-CONTRIB-2012-054
+    SA-CONTRIB-2012-055
 
 {{{
 'drupal6' : {
