--- a/TODO
+++ b/TODO
@@ -346,10 +346,11 @@ eGroupware:
     * http://vulnerability-lab.com/get_content.php?id=482
   * phpPgAdmin
     * CVE-2012-1600
-
-2903 232226 <@ankkuri> Latest OSVDB Vulnerabilities: B2Evolution CMS blogs/htsrv/viewfile.php root Parameter SQL Injection – http://osvdb.org/show/osvdb/80671
-2903 232804 <@ankkuri> Latest OSVDB Vulnerabilities: B2Evolution CMS blogs/blog1.php Message Body XSS – http://osvdb.org/show/osvdb/80672
-
+  * CMSimple_XH <http://www.cmsimple-xh.de>
+    * CVE-2012-1914
+  * B2Evolution CMS
+    * http://osvdb.org/show/osvdb/80671
+    * http://osvdb.org/show/osvdb/80672
 
 || Software || CVE || Other Security Announcements || Fixed in ||
 || SMF || || SA37557 || 1.1.11 ||
