--- a/TODO
+++ b/TODO
@@ -25,6 +25,18 @@ Drupal:
     CVE-2011-2726 SA-CORE-2011-003 http://drupal.org/node/1231510
     CVE-2011-2687 SA-CORE-2011-002 http://drupal.org/node/1204582
     SA-CORE-2011-001 http://drupal.org/node/1168756
+    SA-CONTRIB-2012-030
+    SA-CONTRIB-2012-031
+    SA-CONTRIB-2012-032
+    SA-CONTRIB-2012-033
+    SA-CONTRIB-2012-034
+    SA-CONTRIB-2012-035
+    SA-CONTRIB-2012-036
+    SA-CONTRIB-2012-037
+    SA-CONTRIB-2012-038
+    SA-CONTRIB-2012-039
+    SA-CONTRIB-2012-040
+    DRUPAL-PSA-2012-001
     SA-CONTRIB-2012-043
     SA-CONTRIB-2012-044
     SA-CONTRIB-2012-045
