Added more Drupal contrib issues.

--- a/TODO
+++ b/TODO
@@ -28,6 +28,12 @@ Drupal:
     CVE-2011-2726 SA-CORE-2011-003 http://drupal.org/node/1231510
     CVE-2011-2687 SA-CORE-2011-002 http://drupal.org/node/1204582
     SA-CORE-2011-001 http://drupal.org/node/1168756
+    SA-CONTRIB-2012-024
+    SA-CONTRIB-2012-025
+    SA-CONTRIB-2012-026
+    SA-CONTRIB-2012-027
+    SA-CONTRIB-2012-028
+    SA-CONTRIB-2012-029
     SA-CONTRIB-2012-030
     SA-CONTRIB-2012-031
     SA-CONTRIB-2012-032
