--- a/yamls/joomla-2.5
+++ b/yamls/joomla-2.5
@@ -1,3 +1,3 @@
 # TODO: Joomla 2.5 needs support for configuration specific parser and MySQL queries
-# CVE-2012-4531 2.5.7 SA49678 http://developer.joomla.org/security/news/539-20120901-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html
-# CVE-2012-4532 2.5.7 SA49678 http://developer.joomla.org/security/news/540-20120902-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html
+# CVE-2012-4531 2.5.7 OSVDB:87038 SA49678 http://developer.joomla.org/security/news/539-20120901-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html
+# CVE-2012-4532 2.5.7 OSVDB:83490 SA49678 http://developer.joomla.org/security/news/540-20120902-core-xss-vulnerability http://www.joomla.org/announcements/release-news/5463-joomla-2-5-7-released.html http://www.darksecurity.de/advisories/2012/SSCHADV2012-014.txt
